--- a/assets/css/user_dashboard.css
+++ b/assets/css/user_dashboard.css
@@ -1,4 +1,32 @@
-.btn-dashboard{
-	color: #0562DC;
-	border: 2px solid #0562DC;
-}
+ .btn-dashboard{
+    display: inline-block;
+  font-weight: 400;
+  color: #0562DC;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 2px solid #0562DC;
+
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+   }
+   .btn-dashboard:hover{
+    color: #fff;
+    text-decoration: none;
+     background: #0562DC;
+     transform: scale(1.05,1.05);
+   }
+  .logout-link{
+    color: #fff;
+    margin-right: 30px;
+  }
+  .logout-link:hover{
+    text-decoration: none;
+    color: #fff;
+  }
